--- a/web/templates/chats.html
+++ b/web/templates/chats.html
@@ -9,7 +9,9 @@
     <!-- Axios CDN -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script> -->
-
+    
+    <!-- Socket io -->
+    <script src="/socket.io/socket.io.js"></script>
 
 
 
