--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,6 +9,9 @@
     <!-- Axios CDN -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+    <!-- Socket io -->
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
+    
     <title>MessageCenter | Login</title>
 </head>
 <body>
